* fix replacing jp by ja in lang.

--- a/views/blogCreate.html
+++ b/views/blogCreate.html
@@ -1,7 +1,7 @@
 <!-- blogCreate.html -->
 
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
     <title>ブログ投稿ページ</title>
