--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,3 +1,5 @@
 <!-- header.ejs -->
 
-<header>Header</header>
+<header>
+  <a href="/"><img src="/public/images/header-img.svg" alt="header-image" /></a>
+</header>
