--- a/views/blogRead.ejs
+++ b/views/blogRead.ejs
@@ -9,10 +9,16 @@
   <body>
     <%- include("./header"); %>
     <main>
-      <div>
+      <div class="blog-read">
         <h1><%= singleBlog.title %></h1>
         <img src="/public/images<%= singleBlog.image %>" alt="blog-image" />
         <p><%= singleBlog.textBody%></p>
+      </div>
+      <div class="bottom">
+        <% if (session !== undefined) { %>
+          <a href="/blog/update/<%= singleBlog._id %>" class="update-button">編集</a>
+          <a href="/blog/delete/<%= singleBlog._id %>" class="delete-button">削除</a>
+        <% } %>
       </div>
     </main>
     <%- include("./footer"); %>
